# polars-datareader

./: .coveragerc  .gitattributes  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/install/: action.yaml
.github/workflows/: pytest.yaml
ci/azure/: azure_template_posix.yml  azure_template_windows.yml
docs/source/: cache.rst  conf.py  index.rst  remote_data.rst
docs/source/readers/: alphavantage.rst  bank-of-canada.rst  econdb.rst  enigma.rst  eurostat.rst  famafrench.rst  fred.rst  iex.rst  moex.rst  nasdaq-trader.rst  naver.rst  oecd.rst  quandl.rst  stooq.rst  tiingo.rst  tsp.rst  world-bank.rst  yahoo.rst
docs/source/whatsnew/: v0.9.0.txt
polars_datareader/: _utils.py  _version.py  bankofcanada.py  base.py  data.py  econdb.py  enigma.py  eurostat.py  famafrench.py  fred.py  moex.py  nasdaq_trader.py  naver.py  oecd.py  quandl.py  stooq.py  tiingo.py  tsp.py  wb.py
polars_datareader/av/: __init__.py  forex.py  quotes.py  sector.py  time_series.py
polars_datareader/compat/: __init__.py
polars_datareader/iex/: __init__.py  daily.py  deep.py  market.py  ref.py  stats.py  tops.py
polars_datareader/io/: __init__.py  jsdmx.py  sdmx.py  util.py
polars_datareader/yahoo/: actions.py  components.py  daily.py  fx.py  options.py  quotes.py
tests/: test_bankofcanada.py  test_base.py  test_data.py  test_econdb.py  test_enigma.py  test_eurostat.py  test_famafrench.py  test_fred.py  test_iex.py  test_iex_daily.py  test_moex.py  test_nasdaq.py  test_naver.py  test_oecd.py  test_quandl.py  test_stooq.py  test_tiingo.py  test_tsp.py  test_utils.py  test_wb.py
tests/av/: test_av_forex.py  test_av_quotes.py  test_av_sector.py  test_av_time_series.py
tests/io/: test_jsdmx.py  test_sdmx.py
tests/yahoo/: test_options.py  test_yahoo.py
