[build-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "polars-datareader"
description = "Polars-compatible data readers. Formerly a component of polars."
readme = "README.md"
authors = [
    { name = "The PyData Development Team", email  = "pydata@googlegroups.com" }
]
license = { file = "LICENSE.md" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.25",
    "polars",
    "lxml",
    "requests>=2.19.0"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "flake8-bugbear",
    "coverage",
    "codecov",
    "coveralls",
    "flake8",
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "wrapt",
]

[project.urls]
"Bug Tracker" = "https://github.com/polars-stats/polars-datareader/issues"
"Source Code" = "https://github.com/polars-stats/polars-datareader"

[tool.setuptools.packages.find]
include = ["polars_datareader"]
exclude = ["contrib", "docs", "tests*"]
