[metadata]

[versioneer]
VCS = git
style = pep440
versionfile_source = polars_datareader/_version.py
versionfile_build = polars_datareader/_version.py
tag_prefix = v

[isort]
known_compat=polars_datareader.compat.*
sections=FUTURE,COMPAT,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party=polars_datareader
known_third_party=numpy,pandas,pytest,requests
combine_as_imports=True
force_sort_within_sections=True
profile=black

[tool:pytest]
# sync minversion with setup.cfg & install.rst
minversion = 5.0.1
testpaths = polars_datareader
# tests not marked as stable are unstable
markers =
    stable: mark a test as applying to a stable reader
    requires_api_key: mark a test as requiring an API key
    alpha_vantage: mark a test of the AlphaVantage reader
    quandl: mark a test of the Quandl reader
filterwarnings =
    ignore:`np.bool` is a deprecated alias:DeprecationWarning:pandas.core.indexes
    ignore:`np.object` is a deprecated alias:DeprecationWarning:pandas.core.indexes
    ignore:`np.float` is a deprecated alias:DeprecationWarning:pandas.core.indexes
    ignore:`np.complex` is a deprecated alias:DeprecationWarning:pandas.core.indexes
    ignore:`np.bool` is a deprecated alias:DeprecationWarning:pandas.core.internals.blocks
    ignore:`np.object` is a deprecated alias:DeprecationWarning:pandas.core.internals.blocks
    ignore:`np.object` is a deprecated alias:DeprecationWarning:pandas.core.internals.construction
    ignore:`np.object` is a deprecated alias:DeprecationWarning:pandas.io.parsers
    ignore:`np.object` is a deprecated alias:DeprecationWarning:pandas.core.dtypes.cast
    ignore:`np.float` is a deprecated alias:DeprecationWarning:pandas.core.internals.blocks
    ignore:`np.complex` is a deprecated alias:DeprecationWarning:pandas.core.internals.blocks
    ignore:Converting `np.inexact` or `np.floating` to a dtype:DeprecationWarning:pandas.core.indexes

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9
